Add background of the study

--- a/DLSUdtp _v2017.04.08/introduction.tex
+++ b/DLSUdtp _v2017.04.08/introduction.tex
@@ -1,52 +1,56 @@
 \section{Background of the Study}
 
-Aside from the usual text descriptions of the background, put here figures that will cast images to your audience about the context of your work.
+A quadrotor or a quadcopter is a small mechanical vehicle that can fly using four propellers that are run by motors. These machines have been around from quite some time actually as early as the 1920s and 1930s (droneomega.com). However, these early concepts had bad performance and were very large that caused its instability (droneomega.com). Through the years, quadcopters have improved due to the advancement of technology and recently they have been gaining popularity due to its impressive capabilities (Brown, 2016). Today, drones are working in so many areas that these may be the future of humanity.
+
+Quadrotors (or quadcopters) find uses in a large variety of applications ranging from photography to military uses. They’re used in the entertainment industry for wide-angle shots from high altitudes, used as mounts for cameras in many styles of photography, and are used to get shots in dangerous situations. (Brown, 2017).  These are great for capturing scenes from angles that were impossible before. Quadrotors are also applied in military and law enforcement as unmanned surveillance devices. They can act as scouts in missions to perform reconnaissance without the need of putting a human life in danger of the unknown. These types of drones also find a lot of use in human rescue, as their high-mobility allows rescuers to quickly and efficiently survey areas of disaster for any potential survivors.  It can also be used to drop medicines and supplies to unreachable locations (Riche,2017). They also find uses in the field of agriculture, keeping track of crops through remote cameras and taking advantage of its speed to study large sized farm lands quickly.
+
+All of these applications are however are drawn back by the short flight times of commercially available drones. High-end quadrotor drones can stay in continuous flight for up to 20 minutes at a time before recharging is required.  A primary benefit from this study would be a general improvement to battery life for all applications of quadrotors, as most of these applications would greatly benefit from an increase to flight-time.
 
 \graytx{\Blindtext}
 
 
 \section{Prior Studies}
 
-Put here a narrative and a \index{summary}summary (not a duplicate) of your literature review chapter.  In this section, summarize and highlight the gap(s) found in the literature review in Chapter~\ref{ch:litrev}. Preferably, a table showing the summary would be helpful. 
+Put here a narrative and a \index{summary}summary (not a duplicate) of your literature review chapter.  In this section, summarize and highlight the gap(s) found in the literature review in Chapter~\ref{ch:litrev}. Preferably, a table showing the summary would be helpful.
 
 Prior Studies or Literature Review\footnote{The main difference between the Prior Studies and Literature Review is that the Prior Studies is done in a concise manner.  By the way, this is also an example of a footnote usage.} (expansion of the Prior Studies) is basically about \redtx{competition}. \hl{Competition}.
 
 So the \underline{suggested} goals in writing the narrative of the Prior Studies in summative and highlighted forms  are, in no particular order:
 
 \begin{enumerate}
-	\item to mention briefly the problem; 
+	\item to mention briefly the problem;
 
 	\item to show the features of the existing literature in solving the problem
 
-	\item to show the weaknesses of the solutions of existing literature 
+	\item to show the weaknesses of the solutions of existing literature
 
 	\item to show how your solution is better (can be better (for proposals))
 \end{enumerate}
 
-\noindent If the suggested table will be placed, please discuss it in light of the above-mentioned items. 
+\noindent If the suggested table will be placed, please discuss it in light of the above-mentioned items.
 
  \graytx{\blindtext}
 
 
 \section{Problem Statement}
 
-The problem statement needs to be very clear and to the point. 
+The problem statement needs to be very clear and to the point.
 
 \noindent A persuasive problem statement from a contextualized and intended-audience-awareness perspective consists of:
 
 \begin{enumerate}
-	\item PS1: description of the ideal scenario for your intended audience	
+	\item PS1: description of the ideal scenario for your intended audience
 	\begin{itemize}
 		\item Describe the goals, desired state, or the values that your audience considers important and that are relevant to the problem.
 	\end{itemize}
-	
+
 	\item PS2:  reality of the situation
 	\begin{itemize}
 			\item Describe a condition that prevents the goal, state, or value discussed in PS1 from being achieved or realized at the present time.
 			\item It is imperative to make the audience feel the pain point.
 	\end{itemize}
-	
-	\item PS3:  consequences for the audience		
+
+	\item PS3:  consequences for the audience
 	\begin{itemize}
 			\item Using specific details, show how the situation contains little promise of improvement unless something is done.
 	\end{itemize}
@@ -74,13 +78,13 @@ To \ldots;
 
 \begin{enumerate}
 	\item To  \ldots;
-	
+
 	\item To  \ldots;
-	
+
 	\item To  \ldots;
-	
+
 	\item To  \ldots;
-	
+
 	\item To  \ldots;
 \end{enumerate}
 
@@ -100,33 +104,33 @@ Bulletize your assumptions in one group, and then bulletize the scope in another
 
 \begin{enumerate}
 	\item \ldots;
-	
+
 	\item \ldots;
-	
-	\item \ldots;	
+
+	\item \ldots;
 \end{enumerate}
 
 \subsection{Scope}
 \begin{enumerate}
 	\item \ldots;
-	
+
 	\item \ldots;
-	
-	\item \ldots;	
+
+	\item \ldots;
 \end{enumerate}
 
 \subsection{Delimitations}
 \begin{enumerate}
 	\item \ldots;
-	
+
 	\item \ldots;
-	
-	\item \ldots;	
+
+	\item \ldots;
 \end{enumerate}
 
 \section{Description and Methodology of the \documentType}
 
-A purpose of the description here is to re-steer/remind the panelist/reader again by tersely describing what your thesis is about (i.e. the problem and the main goal you want to achieve) in another way without sounding repetitive. 
+A purpose of the description here is to re-steer/remind the panelist/reader again by tersely describing what your thesis is about (i.e. the problem and the main goal you want to achieve) in another way without sounding repetitive.
 
 Your methodology is your means of achieving your stated objectives.
 
@@ -157,4 +161,3 @@ For ECE undergraduate theses, the individual Gantt Chart and Bill of Materials w
 \section{Overview of the \documentType}
 
 Provide here a brief summary and what the reader should expect from each succeeding chapter.  Show how each chapter is connected with each other.
-
